crates/monochange_cli/tests/snapshots/affected__affected_scenarios_match_snapshot@accepts_changesets_covering_changed_packages.snap
---
source: crates/monochange/tests/affected.rs
expression: redacted
---
{
  "affected_package_ids": [
    "core"
  ],
  "changed_paths": [
    "crates/core/src/lib.rs",
    ".changeset/feature.md"
  ],
  "changeset_paths": [
    ".changeset/feature.md"
  ],
  "comment": null,
  "covered_package_ids": [
    "core"
  ],
  "enforce": false,
  "errors": [],
  "ignored_paths": [],
  "labels": [],
  "matched_paths": [
    "crates/core/src/lib.rs"
  ],
  "matched_skip_labels": [],
  "required": true,
  "status": "passed",
  "summary": "changeset verification passed: attached changesets cover 1 changed package",
  "uncovered_package_ids": []
}
