crates/monochange_cli/tests/snapshots/affected__affected_scenarios_match_snapshot@respects_package_additional_paths.snap
---
source: crates/monochange/tests/affected.rs
expression: redacted
---
{
  "affected_package_ids": [
    "core"
  ],
  "changed_paths": [
    "Cargo.lock"
  ],
  "changeset_paths": [],
  "comment": "[multiline text]",
  "covered_package_ids": [],
  "enforce": false,
  "errors": [
    "changed packages are not covered by attached changesets: core"
  ],
  "ignored_paths": [],
  "labels": [],
  "matched_paths": [
    "Cargo.lock"
  ],
  "matched_skip_labels": [],
  "required": true,
  "status": "failed",
  "summary": "changeset verification failed: attached changesets do not cover 1 changed package",
  "uncovered_package_ids": [
    "core"
  ]
}
